--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
   flutter_svg: ^2.0.9
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
