--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>프로필 사진 등록을 위한, 사진 데이터 권한 요청</string>
+	<key>NSCameraUsageDescription</key>
+	<string>QR코드 스캔 또는 사진 및 동영상을 촬영하기 위해 권한이 필요합니다.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>동영상을 촬영하는 동안 소리가 같이 들어가야 한다면 해당 권한이 필요합니다.</string>
 </dict>
 </plist>
