--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
