--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.1
   image_picker: ^1.0.7
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
