--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,5 +51,10 @@
 	<string>QR코드 스캔 또는 사진 및 동영상을 촬영하기 위해 권한이 필요합니다.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>동영상을 촬영하는 동안 소리가 같이 들어가야 한다면 해당 권한이 필요합니다.</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>sms</string>
+		<string>tel</string>
+	</array>
 </dict>
 </plist>
