--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   json_annotation: ^4.8.1
   shared_preferences: ^2.2.2
   carousel_slider: ^4.2.1
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
