--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.2.2
   carousel_slider: ^4.2.1
   url_launcher: ^6.2.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
