--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   carousel_slider: ^4.2.1
   url_launcher: ^6.2.5
   intl: ^0.19.0
+  path_provider: ^2.1.2
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
