--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>741798797945-c0gsk8hm151ar2fv0n1v5kq6rmhqbvnf.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.741798797945-c0gsk8hm151ar2fv0n1v5kq6rmhqbvnf</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>741798797945-qg3cvdf1qv16eufsqi5on784f40pje0u.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDnwSEMOa-pxSjwjUxLzOKuhq6wCbltR5U</string>
 	<key>GCM_SENDER_ID</key>
