--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.19.0
   path_provider: ^2.1.2
   http: ^1.2.0
+  firebase_core: ^2.27.0
 
 dev_dependencies:
   flutter_test:
