--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.2
   http: ^1.2.0
   firebase_core: ^2.27.0
+  firebase_storage: ^11.6.9
 
 dev_dependencies:
   flutter_test:
