--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_storage: ^11.6.9
   cloud_firestore: ^4.15.8
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
