--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_storage: ^11.6.9
   cloud_firestore: ^4.15.8
   freezed_annotation: ^2.4.1
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
