--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   cloud_firestore: ^4.15.8
   freezed_annotation: ^2.4.1
   google_sign_in: ^6.2.1
+  firebase_auth: ^4.17.8
 
 dev_dependencies:
   flutter_test:
