--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   google_sign_in: ^6.2.1
   firebase_auth: ^4.17.8
+  sign_in_with_apple: ^5.0.0
 
 dev_dependencies:
   flutter_test:
