--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^4.17.8
   sign_in_with_apple: ^5.0.0
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
